--- a/curriculo.html
+++ b/curriculo.html
@@ -4,7 +4,7 @@
 <head>
     <title> Curriculo </title>
     <meta charset="utf-8">
-    <meta name="author" content="Daniel Tapias Morales">
+    <meta name="author" content="Amanda Mardelen ">
     <meta name="description" content="descrição bacanuda">
     <meta name="keywords" content="html5, tecnologia">
 
